--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="container my-5">
     <h1 class="text-center my-4">To-do List</h1>
     <div class="input-group mb-3">
       <input type="text" id="inputField" class="form-control" placeholder="Add a new task">
@@ -19,7 +19,6 @@
     </div>
     <div class="list-group" id="toDoContainer"></div>
   </div>
-
   <script src="main.js"></script>
   <!-- Add Bootstrap JS and dependencies -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
